<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    app:orientation="horizontal"
    tools:context=".CalculatriceActivity">


    <TextView
        android:id="@+id/affichage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/clear"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/percent_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/percent"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/div_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/div"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/seven"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/eight"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/nine"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mult_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/multiply"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/four"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/five"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/six"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/substract"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/one"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/two"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/three"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sum_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/sum"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/zero"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/dot_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/dot"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/res_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/result"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>