<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/hinttitle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edit_note_content"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:hint="@string/hintcontent"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editnote"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/removenote"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:onClick="back"
        />

</LinearLayout>