<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="tabview.PlaceholderFragment">

    
    <Chronometer
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_marginBottom="100dp"/>
    <Button
        android:id="@+id/buttonstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronostart"
        android:onClick="startChrono"/>
    <Button
        android:id="@+id/buttonpause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronopause"
        android:onClick="pauseChrono"/>
    <Button
        android:id="@+id/buttonrestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chronorestart"
        android:onClick="restartChrono"/>


</LinearLayout>