<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:clickable="false"
        app:columnCount="3"
        app:columnOrderPreserved="false"
        app:layout_columnWeight="1"
        app:orientation="horizontal"
        app:rowCount="5">

        <ImageView
            android:id="@+id/flashLightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flashlight"
            android:onClick="openFlashLight"
            app:layout_columnWeight="1"
            app:srcCompat="@mipmap/flashlight_icon_foreground" />

        <ImageView
            android:id="@+id/calculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calculator"
            android:onClick="openCalculatrice"
            app:layout_columnWeight="1"
            app:srcCompat="@mipmap/calculator_foreground" />

        <ImageView
            android:id="@+id/notepad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notepad"
            android:onClick="openNotepad"
            app:layout_columnWeight="1"
            app:srcCompat="@mipmap/notepad_foreground" />

        <ImageView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currencyConverter"
            android:onClick="openCurrency"
            android:scaleType="centerInside"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:srcCompat="@mipmap/currencies_foreground" />

        <ImageView
            android:id="@+id/coronavirus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coronavirus"
            android:onClick="openCoronavirus"
            android:scaleType="centerInside"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:srcCompat="@mipmap/currencies_foreground" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clock"
            android:onClick="openClock"
            app:layout_columnWeight="1"
            app:srcCompat="@mipmap/logo_clock_foreground" />

    </androidx.gridlayout.widget.GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/admain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
