<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Notepad">
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />


    <TextView
        android:id="@+id/lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/listnotes"
        android:layout_marginBottom="10dp"
        />
    <ListView
        android:id="@+id/notelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addnote"
            android:onClick="addNote"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="mod"
            android:onClick="modifyNote"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="sup"
            android:onClick="removeNote"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="back"
            />
    </LinearLayout>
</LinearLayout>